# fifnmar_cg_cpp

./: .gitignore  CMakeLists.txt
dep/glad2/: CMakeLists.txt
dep/glad2/include/glad/: gl.h
dep/glad2/src/: gl.c
dep/imgui-1.87/: CMakeLists.txt
dep/nukclear-4.9.6/: CMakeLists.txt
fifnmar_cg_lab/: CMakeLists.txt  board.cpp  board.frag  board.hpp  board.vert  color.hpp  cursor.cpp  cursor.hpp  draw.hpp  draw_controller.cpp  draw_controller.hpp  draw_generic.hpp  draw_line_controller.cpp  draw_line_controller.hpp  glfw_context.cpp  glfw_context.hpp  main.cpp  signal.cpp  signal.hpp  ui.cpp  ui.hpp  utils.hpp
fifnmar_cg_lab/draw/: draw.hpp  draw_line_controller.cpp  draw_line_controller.hpp
fifnmar_cg_lab/ui/: nuklear_use.h
